Add default timezone eet

--- a/src/main/java/fi/leevi/project/todo
+++ b/src/main/java/fi/leevi/project/todo
@@ -1,12 +1,12 @@
 next:
-finish posts -> timestamps, 25 newest
+finish posts -> timestamps -> 25 newest
 show skills
 likes for skills and posts
 top 3 skills
 comments for posts
 10 newest comments
-ignore for friendrequest
+ignore for friendrequests
 remove for friend
 
 
-skipped cause boring:
+stuff that i skipped cause boring:
