profile.html now shows top 3 skills and "other skills"

--- a/src/main/java/fi/leevi/project/todo
+++ b/src/main/java/fi/leevi/project/todo
@@ -1,7 +1,5 @@
 next:
 
-likes for skills
-top 3 skills
 comments for posts
 10 newest comments
 ignore for friendrequests
@@ -15,3 +13,4 @@ profilepicture upload error message.
 make it so that when you are on other person's profile the profile link points to your own and not homepage.
 add error message to search user when there is no such a user.
 most of the code in method friends() in class FriendsService can be replaced with the jpa query in FriendsRepository.
+clean up profile() in profilecontroller and other methods as well.
