You can now comment and comment are displayed

--- a/src/main/java/fi/leevi/project/todo
+++ b/src/main/java/fi/leevi/project/todo
@@ -1,9 +1,9 @@
 next:
 
-comments for posts
 10 newest comments
 ignore for friendrequests
 remove for friend
+format post time better
 
 
 stuff that i skipped cause boring:
