instructions to profilepicture

--- a/src/main/java/fi/leevi/project/todo
+++ b/src/main/java/fi/leevi/project/todo
@@ -1,11 +1,12 @@
 next:
 
 ? :
+make less repository searches
 signup validation
+default profile picture
 
 stuff that i skipped cause boring:
 
-profilepicture upload error message.
 add error message to search user when there is no such a user.
 most of the code in method friends() in class FriendsService can be replaced with the jpa query in FriendsRepository.
 clean up profile() in profilecontroller and other methods as well.
